POWR-316-1 Add pages for groups and update the group menu block

--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_guides-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_guides-panels_variant-0.yml
@@ -6,6 +6,7 @@ dependencies:
     - page_manager.page.taxonomy_term_guides
     - views.view.content_by_taxonomy
     - views.view.content_by_taxonomy_menu
+    - views.view.groups_by_topic
   module:
     - ctools
     - panels
@@ -48,13 +49,24 @@ variant_settings:
       weight: 1
       uuid: 9e57df13-40ac-424a-93fc-36613081686d
       context_mapping: {  }
+    127d6f3f-3287-43f4-8c88-c34a29904f59:
+      id: 'views_block:groups_by_topic-block_2'
+      label: ''
+      provider: views
+      label_display: '0'
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 0
+      uuid: 127d6f3f-3287-43f4-8c88-c34a29904f59
+      context_mapping: {  }
   id: panels_variant
   uuid: 71382375-016f-4a87-bb5c-3d381b826271
   label: null
   weight: 0
   layout: layout_onecol
   layout_settings: {  }
-  page_title: '[term:name] : Guides'
+  page_title: '[term:name]'
   storage_type: page_manager
   storage_id: taxonomy_term_guides-panels_variant-0
   builder: standard
