--- a/web/sites/default/config/views.view.content_by_taxonomy_menu.yml
+++ b/web/sites/default/config/views.view.content_by_taxonomy_menu.yml
@@ -63,7 +63,7 @@ display:
           default_row_class: false
           type: ul
           wrapper_class: ''
-          class: 'nav nav-group mb-3'
+          class: 'nav nav-pills mb-3'
       row:
         type: fields
       fields:
@@ -179,6 +179,14 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
+          set_precision: false
+          precision: 0
+          decimal: .
+          separator: ', '
+          format_plural: 0
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ''
           click_sort_column: value
           type: number_integer
           settings:
@@ -192,7 +200,6 @@ display:
           delta_reversed: false
           delta_first_last: false
           multi_type: separator
-          separator: ', '
           field_api_classes: false
           entity_type: node
           entity_field: nid
@@ -203,12 +210,12 @@ display:
           field: nothing
           relationship: none
           group_type: group
-          admin_label: Menu
+          admin_label: 'Menu item'
           label: ''
           exclude: false
           alter:
             alter_text: true
-            text: "{% set currentPath = path('<current>') %}\r\n{% if (currentPath ends with '/guides') %}\r\n{% set currentPath = currentPath|replace({'/guides': ''}) %}\r\n{% endif %}\r\n\r\n{% if (type == 'Services') %}\r\n<a href=\"{{ currentPath }}\" class=\"nav-link\">{{ type }}</a>\r\n{% else %}\r\n<a href=\"{{ currentPath }}/{{ type|lower }}\" class=\"nav-link\">{{ type }}</a>\r\n{% endif %}"
+            text: "{% set currentPath = path('<current>') %}\r\n{% set activeType = 'Services' %}\r\n\r\n{% if (currentPath ends with '/guides') %}\r\n   {% set currentPath = currentPath|replace({'/guides': ''}) %}\r\n   {% set activeType = 'Guides' %}\r\n{% endif %}\r\n\r\n{% if (currentPath ends with '/bureaus') %}\r\n{% set currentPath = currentPath|replace({'/bureaus': ''}) %}\r\n   {% set activeType = 'Bureaus' %}\r\n{% endif %}\r\n\r\n{% if (currentPath ends with '/programs') %}\r\n{% set currentPath = currentPath|replace({'/programs': ''}) %}\r\n   {% set activeType = 'Programs' %}\r\n{% endif %}\r\n\r\n{% if (currentPath ends with '/projects') %}\r\n{% set currentPath = currentPath|replace({'/projects': ''}) %}\r\n   {% set activeType = 'Projects' %}\r\n{% endif %}\r\n\r\n{# Services is the default URL #}\r\n{% if (type != 'Services') %}\r\n   {% if (activeType == type) %}\r\n        <a href=\"{{ currentPath }}/{{ type|lower }}\" class=\"nav-link active\">{{ type }}</a>\r\n   {% else %}\r\n        <a href=\"{{ currentPath }}/{{ type|lower }}\" class=\"nav-link\">{{ type }}</a>\r\n   {% endif %}\r\n{% else %}\r\n   {% if (activeType == 'Services') %}\r\n        <a href=\"{{ currentPath }}\" class=\"nav-link active\">{{ type }}</a>\r\n   {% else %}\r\n        <a href=\"{{ currentPath }}\" class=\"nav-link\">{{ type }}</a>\r\n   {% endif %}\r\n{% endif %}\r\n"
             make_link: false
             path: ''
             absolute: false
@@ -314,16 +321,20 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          default_action: ignore
+          default_action: default
           exception:
             value: all
             title_enable: false
             title: All
           title_enable: false
           title: ''
-          default_argument_type: fixed
+          default_argument_type: taxonomy_tid
           default_argument_options:
-            argument: ''
+            term_page: '1'
+            anyall: ','
+            node: false
+            limit: false
+            vids: {  }
           default_argument_skip_url: false
           summary_options:
             base_path: ''
@@ -346,6 +357,7 @@ display:
           plugin_id: taxonomy_index_tid
       display_extenders: {  }
       group_by: true
+      css_class: d-inline-block
     cache_metadata:
       max-age: -1
       contexts:
