--- a/web/sites/default/config/block.block.cloudy_breadcrumbs.yml
+++ b/web/sites/default/config/block.block.cloudy_breadcrumbs.yml
@@ -19,4 +19,9 @@ settings:
   label: Breadcrumbs
   provider: system
   label_display: '0'
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '/taxonomy/term/*/*'
+    negate: true
+    context_mapping: {  }
