POWR-316-1 Add module pantheon_advanced_page_cache

--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         "drupal/maxlength": "^1.0",
         "drupal/openid_connect": "^1.0@beta",
         "drupal/page_manager": "^4.0@beta",
+        "drupal/pantheon_advanced_page_cache": "^1.0",
         "drupal/paragraphs": "^1.1",
         "drupal/prepopulate": "^2.0",
         "drupal/rabbit_hole": "^1.0@beta",
