--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -111,6 +111,7 @@ module:
   panelizer_quickedit: 0
   panels: 0
   panels_ipe: 0
+  pantheon_advanced_page_cache: 0
   path: 0
   portland: 0
   portland_legacy_redirects: 0
