--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -165,3 +165,4 @@ metatag_twitter_cards: 0.0.0
 portland_revision_helper: 0.1.0
 webform: 5.0.0-rc22
 webform_ui: 5.0.0-rc22
+pantheon_advanced_page_cache: 1.0.0
