POWR-316-1 Turn off caching for menu blocks

--- a/web/sites/default/config/views.view.groups_by_topic.yml
+++ b/web/sites/default/config/views.view.groups_by_topic.yml
@@ -350,6 +350,7 @@ display:
         title: false
         filters: false
         filter_groups: false
+        cache: false
       fields:
         id:
           id: id
@@ -582,6 +583,9 @@ display:
         operator: AND
         groups:
           1: AND
+      cache:
+        type: none
+        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
