POWR-316-1 Add drush entup to CI script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,7 @@ behat_tests: &behat_tests
             # terminus remote:drush portlandor.dev -- cim -y
             for i in {1..12}; do terminus remote:drush portlandor.dev -- cim -y && break || sleep 10; done
             for i in {1..12}; do terminus remote:drush portlandor.dev -- -y updb && break || sleep 10; done
+            for i in {1..12}; do terminus remote:drush portlandor.dev -- entup && break || sleep 10; done
             for i in {1..12}; do terminus remote:drush portlandor.dev -- cr && break || sleep 10; done
             # echo 'node_access_rebuild();' | $(terminus remote:drush portlandor.dev -- php-script)
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
@@ -161,6 +162,7 @@ behat_tests: &behat_tests
             # Clear cache. Import config files
             for i in {1..6}; do terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && break || sleep 10; done
             for i in {1..6}; do terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb && break || sleep 10; done
+            for i in {1..12}; do terminus remote:drush portlandor.dev -- entup && break || sleep 10; done
             for i in {1..6}; do terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && break || sleep 10; done
             # echo 'node_access_rebuild();' | $(terminus drush portlandor.$CIRCLE_BRANCH -- php-script)
           fi
