POWR-316-1 Add title filter to groups

--- a/web/sites/default/config/views.view.groups_by_topic.yml
+++ b/web/sites/default/config/views.view.groups_by_topic.yml
@@ -676,6 +676,7 @@ display:
         style: false
         row: false
         header: false
+        use_ajax: false
       display_description: 'Bureaus by topic'
       filters:
         type:
@@ -719,6 +720,48 @@ display:
           entity_type: group
           entity_field: type
           plugin_id: bundle
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: label_op
+            label: 'Title contains'
+            description: ''
+            use_operator: false
+            operator: label_op
+            identifier: label
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: group
+          entity_field: label
+          plugin_id: string
       filter_groups:
         operator: AND
         groups:
@@ -746,6 +789,7 @@ display:
           empty: false
           content: '@total bureaus/offices found'
           plugin_id: result
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -836,6 +880,7 @@ display:
         style: false
         row: false
         header: false
+        use_ajax: false
       display_description: ''
       filters:
         type:
@@ -879,6 +924,48 @@ display:
           entity_type: group
           entity_field: type
           plugin_id: bundle
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: label_op
+            label: 'Title contains'
+            description: ''
+            use_operator: false
+            operator: label_op
+            identifier: label
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: group
+          entity_field: label
+          plugin_id: string
       filter_groups:
         operator: AND
         groups:
@@ -906,6 +993,7 @@ display:
           empty: false
           content: '@total programs found'
           plugin_id: result
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -996,6 +1084,7 @@ display:
         style: false
         row: false
         header: false
+        use_ajax: false
       display_description: ''
       filters:
         type:
@@ -1039,6 +1128,48 @@ display:
           entity_type: group
           entity_field: type
           plugin_id: bundle
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: label_op
+            label: 'Title contains'
+            description: ''
+            use_operator: false
+            operator: label_op
+            identifier: label
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: group
+          entity_field: label
+          plugin_id: string
       filter_groups:
         operator: AND
         groups:
@@ -1066,6 +1197,7 @@ display:
           empty: false
           content: '@total projects found'
           plugin_id: result
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
