POWR-426 Add full width paragraph choices to applicable paragraph fields

--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -12,6 +12,8 @@ dependencies:
     - paragraphs.paragraphs_type.email_button
     - paragraphs.paragraphs_type.fax_button
     - paragraphs.paragraphs_type.form_app_button
+    - paragraphs.paragraphs_type.full_width_container
+    - paragraphs.paragraphs_type.full_width_media
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.quote
@@ -53,6 +55,8 @@ settings:
       image: image
       video: video
       audio: audio
+      full_width_container: full_width_container
+      full_width_media: full_width_media
     target_bundles_drag_drop:
       simple_text:
         enabled: true
@@ -114,4 +118,10 @@ settings:
       card:
         weight: -22
         enabled: false
+      full_width_container:
+        enabled: true
+        weight: 22
+      full_width_media:
+        enabled: true
+        weight: 23
 field_type: entity_reference_revisions
