--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
@@ -10,6 +10,7 @@ dependencies:
     - paragraphs.paragraphs_type.email_button
     - paragraphs.paragraphs_type.fax_button
     - paragraphs.paragraphs_type.form_app_button
+    - paragraphs.paragraphs_type.full_width_container
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.service_step
     - paragraphs.paragraphs_type.simple_text
@@ -45,6 +46,7 @@ settings:
       columns_equal: columns_equal
       card_deck: card_deck
       simple_text: simple_text
+      full_width_container: full_width_container
     target_bundles_drag_drop:
       form_app_button:
         enabled: true
@@ -106,4 +108,7 @@ settings:
       video:
         weight: -22
         enabled: false
+      full_width_container:
+        enabled: true
+        weight: 22
 field_type: entity_reference_revisions
