--- a/web/sites/default/config/core.entity_form_display.paragraph.full_width_media.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.full_width_media.default.yml
@@ -6,29 +6,32 @@ dependencies:
     - field.field.paragraph.full_width_media.field_content
     - paragraphs.paragraphs_type.full_width_media
   module:
-    - content_moderation
-    - entity_reference_revisions
+    - paragraphs
 id: paragraph.full_width_media.default
 targetEntityType: paragraph
 bundle: full_width_media
 mode: default
 content:
   field_content:
-    weight: 101
+    weight: 0
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: paragraphs
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
-    third_party_settings: {  }
 hidden:
   created: true
+  moderation_state: true
   status: true
   uid: true
