--- a/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
@@ -30,7 +30,6 @@ third_party_settings:
     regions:
       content:
         - node_title
-        - field_summary
         - field_building
         - field_floor
         - field_open_hours
@@ -42,7 +41,7 @@ third_party_settings:
         label: hidden
         formatter: default
         settings:
-          wrapper: h3
+          wrapper: h4
           class: ''
           link: false
         ft:
@@ -58,44 +57,58 @@ mode: teaser
 content:
   field_building:
     type: entity_reference_entity_view
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_floor:
+    type: string
     weight: 2
     region: content
     label: hidden
     settings:
-      view_mode: address
-      link: false
-    third_party_settings: {  }
-  field_floor:
+      link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_open_hours:
     type: string
     weight: 3
     region: content
     label: hidden
     settings:
       link_to_entity: false
-    third_party_settings: {  }
-  field_open_hours:
-    type: string
-    weight: 4
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_summary:
-    type: string
-    weight: 1
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   service_location_directions_link_entity_view_1:
-    weight: 5
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_legacy_path: true
+  field_summary: true
   links: true
   scheduled_publication: true
