--- a/web/sites/default/config/core.entity_view_display.paragraph.full_width_media.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.full_width_media.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.full_width_media.field_content
     - paragraphs.paragraphs_type.full_width_media
   module:
+    - ds
     - entity_reference_revisions
 id: paragraph.full_width_media.default
 targetEntityType: paragraph
@@ -14,11 +15,19 @@ mode: default
 content:
   field_content:
     weight: 0
-    label: above
+    label: hidden
     settings:
-      view_mode: default
+      view_mode: full_width
       link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_revisions_entity_view
     region: content
 hidden: {  }
