POWR-524 - Updated Moderated Content view to include Editor and Reviewer filters (hadn't saved view before exporting on previous commit)

--- a/web/sites/default/config/views.view.moderated_content.yml
+++ b/web/sites/default/config/views.view.moderated_content.yml
@@ -6,13 +6,8 @@ dependencies:
     - field.storage.node.field_reviewer
   module:
     - content_moderation
-    - csv_serialization
-    - group
     - node
-    - rest
-    - serialization
     - user
-    - views_data_export
 id: moderated_content
 label: 'Moderated Content'
 module: views
@@ -61,10 +56,10 @@ display:
           id: 0
           total_pages: null
           tags:
-            previous: â€¹â€¹
-            next: â€ºâ€º
-            first: 'Â« First'
-            last: 'Last Â»'
+            previous: '‹ Prev'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -882,6 +877,90 @@ display:
             group_items: {  }
           entity_type: node
           plugin_id: moderation_state_filter
+        uid:
+          id: uid
+          table: users_field_data
+          field: uid
+          relationship: revision_uid
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: uid_op
+            label: Editor
+            description: ''
+            use_operator: false
+            operator: uid_op
+            identifier: uid
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: user
+          entity_field: uid
+          plugin_id: user_name
+        uid_1:
+          id: uid_1
+          table: users_field_data
+          field: uid
+          relationship: field_reviewer
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: uid_1_op
+            label: Reviewer
+            description: ''
+            use_operator: false
+            operator: uid_1_op
+            identifier: uid_1
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: user
+          entity_field: uid
+          plugin_id: user_name
       sorts: {  }
       title: 'Moderated Content'
       header:
@@ -917,6 +996,17 @@ display:
           group_type: group
           admin_label: 'field_reviewer: User'
           required: false
+          plugin_id: standard
+        revision_uid:
+          id: revision_uid
+          table: node_revision
+          field: revision_uid
+          relationship: none
+          group_type: group
+          admin_label: 'revision user'
+          required: false
+          entity_type: node
+          entity_field: revision_uid
           plugin_id: standard
       arguments: {  }
       display_extenders: {  }
