POWR-524 - added Group column and filter to main view, refactored Editor and Reviewer columns so that they sort alphabetically not by uid (forgot to save view before exporting on last commit...again, sigh)

--- a/web/sites/default/config/views.view.moderated_content.yml
+++ b/web/sites/default/config/views.view.moderated_content.yml
@@ -87,14 +87,14 @@ display:
           description: ''
           columns:
             title: title
-            gid: gid
+            label: label
             type: type
             moderation_state: moderation_state
-            changed: changed
-            revision_uid: revision_uid
-            field_reviewer: field_reviewer
-            revision_log: revision_log
             status: status
+            changed: changed
+            name: name
+            name_1: name_1
+            revision_log: revision_log
             edit_node: edit_node
           info:
             title:
@@ -104,7 +104,7 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            gid:
+            label:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -125,6 +125,13 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            status:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             changed:
               sortable: true
               default_sort_order: desc
@@ -132,14 +139,14 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            revision_uid:
+            name:
               sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            field_reviewer:
+            name_1:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -148,13 +155,6 @@ display:
               responsive: ''
             revision_log:
               sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            status:
-              sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
@@ -237,11 +237,11 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: field
-        gid:
-          id: gid
-          table: group_content_field_data
-          field: gid
-          relationship: group_content
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: gid
           group_type: group
           admin_label: ''
           label: Group
@@ -285,11 +285,11 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
+          click_sort_column: value
+          type: string
           settings:
-            link: true
-          group_column: target_id
+            link_to_entity: true
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -299,8 +299,8 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: group_content
-          entity_field: gid
+          entity_type: group
+          entity_field: label
           plugin_id: field
         type:
           id: type
@@ -546,11 +546,11 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        revision_uid:
-          id: revision_uid
-          table: node_revision
-          field: revision_uid
-          relationship: none
+        name:
+          id: name
+          table: users_field_data
+          field: name
+          relationship: revision_uid
           group_type: group
           admin_label: ''
           label: Editor
@@ -594,11 +594,11 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
+          click_sort_column: value
+          type: user_name
           settings:
-            link: true
-          group_column: target_id
+            link_to_entity: true
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -608,14 +608,14 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: node
-          entity_field: revision_uid
+          entity_type: user
+          entity_field: name
           plugin_id: field
-        field_reviewer:
-          id: field_reviewer
-          table: node__field_reviewer
-          field: field_reviewer
-          relationship: nid
+        name_1:
+          id: name_1
+          table: users_field_data
+          field: name
+          relationship: field_reviewer
           group_type: group
           admin_label: ''
           label: Reviewer
@@ -659,11 +659,11 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
+          click_sort_column: value
+          type: user_name
           settings:
-            link: true
-          group_column: target_id
+            link_to_entity: true
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -673,6 +673,8 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: user
+          entity_field: name
           plugin_id: field
         revision_log:
           id: revision_log
@@ -1176,7 +1178,6 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
   data_export_1:
     display_plugin: data_export
@@ -1886,5 +1887,4 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
