POWR-518 modified alerts template and view

--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_action_link
-    - field.storage.node.field_severity
     - field.storage.node.field_summary
     - node.type.alert
     - system.menu.main
@@ -13,7 +12,6 @@ dependencies:
     - content_moderation
     - link
     - node
-    - options
     - portland
     - user
 id: alerts
@@ -78,68 +76,6 @@ display:
       row:
         type: fields
       fields:
-        field_severity:
-          id: field_severity
-          table: node__field_severity
-          field: field_severity
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: list_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         view_node:
           id: view_node
           table: node
@@ -619,7 +555,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_action_link'
-        - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
   block_1:
@@ -633,13 +568,10 @@ display:
         type: portland_alerts
         options:
           mapping:
-            toggle_title_field: 0
             title_field: title
-            toggle_id_field: 1
             id_field: nid
-            toggle_changed_field: 1
             changed_field: changed
-            type_field: field_severity
+            type_field: view_node
             summary_field: field_summary
             action_link_field: field_action_link
           dismissible: 1
@@ -658,7 +590,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_action_link'
-        - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
   page_1:
@@ -690,6 +621,5 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_action_link'
-        - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
