POWR-472 Added the POG favicon.

--- a/web/themes/custom/cloudy/config/install/cloudy.settings.yml
+++ b/web/themes/custom/cloudy/config/install/cloudy.settings.yml
@@ -32,3 +32,10 @@ bootstrap_barrio_navbar_background: 'bg-primary'
 # Colors
 # --------------
 bootstrap_barrio_table_hover: 1
+
+# Favicon
+# --------------
+features:
+  favicon: true
+favicon:
+  use_default: false
