--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -28,7 +28,7 @@ type_settings:
     archived:
       published: false
       default_revision: true
-      label: Archived
+      label: Unpublished/Archived
       weight: 1
     draft:
       label: Draft
