--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,6 +89,9 @@ behat_tests: &behat_tests
           git config --global user.email "$eGov_Email"
           # Without these lines, push will fail with "please remote git submodules" error
           rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
+          # Compile SCSS in our custom theme
+          cd ./web/themes/custom/cloudy && npm install && npm run js_andstyle && cd /var/www/html
+          # Add all files before pushing to Pantheon
           git add -f /var/www/html
           # Pantheon site will use the wrong DB if the local is kept
           git rm --cache  web/sites/default/settings.local.php --ignore-unmatch
