--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "gulp"
+        "start": "gulp",
+        "js_and_style": "gulp js_and_style"
     },
     "keywords": [
         "SASS",
