POWR-585 create a new group content view and turn off the old one

--- a/web/sites/default/config/block.block.cloudy_views_block__group_menu_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_menu_block_1.yml
@@ -6,6 +6,7 @@ dependencies:
     - views.view.group_menu
   module:
     - group
+    - system
     - views
   theme:
     - cloudy
@@ -27,10 +28,15 @@ visibility:
   group_type:
     id: group_type
     group_types:
-      program: program
       bureau_office: bureau_office
       elected_official: elected_official
+      program: program
       project: project
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
+  request_path:
+    id: request_path
+    pages: "/group/*/nodes\r\n/group/*/media\r\n/group/*/members"
+    negate: true
+    context_mapping: {  }
