POWR-494 Exclude node_modules under cloudy. Patch packages.

--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -18,14 +18,14 @@
     "license": "MIT",
     "dependencies": {},
     "devDependencies": {
-        "gulp": "~3.9.1",
+        "bootstrap": "^4.0.0",
+        "browser-sync": "^2.26.3",
+        "gulp": "^4.0.0",
         "gulp-autoprefixer": "~4.0.0",
         "gulp-concat": "^2.6.1",
-        "gulp-sass": "~3.1.0",
-        "bootstrap": "^4.0.0",
         "gulp-minify-css": "~1.2.4",
+        "gulp-sass": "~3.1.0",
         "gulp-sourcemaps": "^2.6.0",
-        "gulp-uglify": "~3.0.0",
-        "browser-sync": "~2.18.13"
+        "gulp-uglify": "~3.0.0"
     }
 }
