--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ behat_tests: &behat_tests
           rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
           # Compile SCSS in our custom theme
           cd ./web/themes/custom/cloudy && npm install && npm run js_and_style && cd /var/www/html
+          git rm -r --cached ./web/themes/custom/cloudy/node_modules
           # Add all files before pushing to Pantheon
           git add -f /var/www/html
           # Pantheon site will use the wrong DB if the local is kept
