POWR-585 update the manage group media view and make sure same words are used on both manage views.

--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -467,7 +467,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Last edited by'
+          label: 'Last updated by'
           exclude: false
           alter:
             alter_text: false
@@ -532,7 +532,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Last edited on'
+          label: 'Last updated'
           exclude: false
           alter:
             alter_text: false
