POWR-494 Integrate Brittany's update in package.json and gulpfile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ behat_tests: &behat_tests
           # Without these lines, push will fail with "please remote git submodules" error
           rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
           # Compile SCSS in our custom theme
-          cd ./web/themes/custom/cloudy && npm install && npm run js_and_style && cd /var/www/html
+          cd ./web/themes/custom/cloudy && npm install && npm run build && cd /var/www/html
           git rm -r --cached web/themes/custom/cloudy/node_modules
           # Add all files before pushing to Pantheon
           git add -f /var/www/html
