--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "gulp",
-        "js_and_style": "gulp js_and_style"
+        "dev": "gulp",
+        "build": "gulp style --production"
     },
     "keywords": [
         "SASS",
@@ -19,11 +19,12 @@
     "dependencies": {},
     "devDependencies": {
         "bootstrap": "^4.0.0",
-        "browser-sync": "^2.26.3",
-        "gulp": "^4.0.0",
+        "browser-sync": "~2.18.13",
+        "gulp": "~3.9.1",
         "gulp-autoprefixer": "~4.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-minify-css": "~1.2.4",
+        "gulp-mode": "^1.0.2",
         "gulp-sass": "~3.1.0",
         "gulp-sourcemaps": "^2.6.0",
         "gulp-uglify": "~3.0.0"
